Cambiar email,direccion y telefono

--- a/index_juan.html
+++ b/index_juan.html
@@ -429,15 +429,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@gmdskjsa.es</a>
+									<a href="#">micasamoderna@micasa.es</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(653) 6857237213</a>
+									<a href="#">(612) 6358236423</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>Avenida Pamela numero 2, 03730 Javea, Alicante, España</span>
+									<span>Calle flor de neu 2, 03730 Javea, Alicante, España</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
